@@ -6,13 +6,24 @@ using Godot;
 public partial class DragArea : Control
 {
 
-public override void _GuiInput(InputEvent e)
-{
-    if (e is InputEventScreenDrag)
+    public override void _GuiInput(InputEvent e)
+    {
+        if (e is InputEventMouseMotion mm && mm.ButtonMask == MouseButtonMask.Left)
+        {
+            OnDrag();
+        }
+
+        if (e is InputEventScreenDrag)
+        {
+            OnDrag();
+        }
+    }
+
+    private void OnDrag()
     {
         GD.Print($"Dragging: true");
+        Dragging?.Invoke();
     }
-}
 
     public event Action? Dragging;
 }
